[tool.poetry]
name = "mitiq"
version = "0.18.0dev"
description = '''
Mitiq is an open source toolkit for implementing error mitigation techniques
on most current intermediate-scale quantum computers.
'''
authors = ["Unitary Fund <info@unitary.fund>"]
license = "GPL v3.0"
readme = "README.md"

homepage = "https://mitiq.readthedocs.io/en/stable/"
repository = "https://github.com/unitaryfund/mitiq/"
documentation = "https://mitiq.readthedocs.io/en/stable/"

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.7.2,<3.9"
numpy = "1.20.1"
scipy = "1.7.3"
cirq = "1.0.0"

[tool.poetry.dev-dependencies]
qiskit = "^0.37.1"
pyquil = "3.3.0"
PennyLane-qiskit = "^0.24.0"
PennyLane = "^0.24.0"
amazon-braket-sdk = "^1.29.0"
pytest-xdist = { version = "^2.5.0", extras = ["psutil"] }
pytest-cov = "^3.0.0"
flake8 = "^5.0.4"
black = "^22.6.0"
mypy = "^0.971"
sphinxcontrib-bibtex = "2.4.2"
sphinx-copybutton = "0.4.0"
sphinx-autodoc-typehints = "1.12.0"
myst-nb = "0.12.3"
pydata-sphinx-theme = "0.8.1"
jupytext = "1.11.1"
sphinx-gallery = "^0.11.0"
nbsphinx = "^0.8.9"
openfermion = { version = "^1.5.1", markers = "sys_platform != 'win32'" }
openfermionpyscf = { version = "^0.5", markers = "sys_platform != 'win32'" }
Jinja2 = "3.0.3"
pybtex = "^0.24.0"
pytest = "^7.1.2"
Sphinx = "3.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # black-default
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''


[tool.mypy]
exclude = "mitiq.*.tests*"
ignore_missing_imports = true

# Enable a subset of strict options
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true